# braiins-hashpower-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEVELOPMENT_PLAN.md  Makefile  README.md  SPEC.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
braiins_hashpower_mcp/: __init__.py  server.py
braiins_hashpower_mcp/braiins/: __init__.py  auth.py  client.py  errors.py  market.py  orders.py  settings_cache.py
braiins_hashpower_mcp/mcp/: __init__.py  prompts.py  resources.py  schemas.py  tools.py
braiins_hashpower_mcp/safety/: __init__.py  approvals.py  limits.py  validators.py
examples/: __init__.py  claude_desktop_config.json  langgraph_agent.py
tests/: test_app.py  test_client.py  test_load.py  test_resources.py  test_safety.py  test_server.py  test_tools.py
